--- a/samples/pico_ws19804/Makefile
+++ b/samples/pico_ws19804/Makefile
@@ -4,12 +4,13 @@ BOARD := pico
 
 PICO_DRIVE := e
 
-REPO_DIR := $(shell pwd)
+REPO_DIR := $(shell cd ../.. && pwd)
 SRC_DIR := .
 BUILD_DIR := build/$(BOARD)
+BIN_DIR := $(REPO_DIR)/bin/$(BOARD)_ws19804
 
 BIN_NAME := pico_nes_ws19804.uf2
-BIN := $(BUILD_DIR)/$(BIN_NAME)
+BIN := $(BIN_DIR)/$(BIN_NAME)
 
 CORE_DIR := ../../core
 FATFS_DIR := ../fatfs/source
@@ -23,10 +24,12 @@ SRC_LIST := \
 all: $(BIN)
 
 $(BIN): $(SRC_LIST) CMakeLists.txt Makefile
-	mkdir -p $(BUILD_DIR)
+	@mkdir -p $(BUILD_DIR)
 	cd $(BUILD_DIR) \
 		&& cmake -DPICO_BOARD=$(BOARD) ../.. \
 		&& make -j
+	@mkdir -p $(BIN_DIR)
+	cp $(BUILD_DIR)/$(BIN_NAME) $(BIN_DIR)/.
 	@echo "------------------------------"
 	@echo "UF2 File:"
 	@echo $(BIN)
